--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "echo \"No tests\" && exit 0"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.0",
