--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo \"No tests\" && exit 0"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -32,6 +34,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
